--- a/config/finance/_default/config.toml
+++ b/config/finance/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/tutorials/Finance"
+baseURL = "/tutorials/finance"
 title = "Aspose API References"
 staticdir = 'content/static'
 enableRobotsTXT = true
