--- a/config/finance/production/config.toml
+++ b/config/finance/production/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://reference.aspose.com/tutorials/Finance"
+baseURL = "https://reference.aspose.com/tutorials/finance"
 
 # Google Tag Manager settings
 [params.gtm]
